manifests/ns-and-pass.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mysql-ns

---
apiVersion: v1
kind: Namespace
metadata:
  name: wordpress-ns
