manifests/mysql-deployment.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: mysql-ns

---
apiVersion: v1
kind: Service
metadata:
  name: mysql-db
  namespace: mysql-ns
  labels:
    app: wordpress
spec:
  ports:
  - name: mysql
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: wordpress
  clusterIP: None

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-mysql
  namespace: mysql-ns
  labels:
    app: wordpress
spec:
  selector:
    matchLabels:
      app: wordpress
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - image:  mysql:5.7
        name: mysql
        volumeMounts:
        - name: db-folder
          mountPath: /var/lib/mysql
      volumes:
        - name: db-folder
          emptyDir: {}
