manifests/nginx-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - image: nginx
          name: container-nginx
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 150m
              memory: 200Mi

---
apiVersion: v1
kind: Service 
metadata: 
  name: nginx
spec: 
  selector: 
    app: nginx 
  type: NodePort
  ports: 
  - port: 80
    targetPort: 80
    nodePort: 31111
    protocol: TCP
