manifests/apache-application.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ns-nginx

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web-serv
  name: web-serv
  namespace: ns-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-serv
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: web-serv
    spec:
      containers:
        - image: httpd
          name: httpd
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              cpu: 150m
              memory: 200Mi

---
apiVersion: v1
kind: Service 
metadata: 
  name: svc-nginx
  namespace: ns-nginx
spec: 
  selector: 
    app: web-serv
  ports: 
  - port: 80
    targetPort: 80
    protocol: TCP 
    name: http

---
apiVersion: extensions/v1beta1
kind: Ingress 
metadata: 
  name: ing-nginx
  namespace: ns-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: / 
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt
    certmanager.k8s.io/cluster-issuer: letsencrypt
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - app.devopscert.ga
    secretName: letsencrypt
  rules:
  - host: app.devopscert.ga
    http:
      paths:
      - backend:
          serviceName: svc-nginx
          servicePort: 80
