manifests/wordpress-deployment.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: wordpress-ns

---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: wordpress-ns
  labels:
    app: wordpress
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    name: http
  selector:
    app: wordpress

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: wordpress-ns
  labels:
    app: wordpress
spec:
  # replicas: 1
  selector:
    matchLabels:
      app: wordpress
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - image: wordpress
          name: wordpress
          ports:
            - containerPort: 80
              name: wordpress
          
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/www/vagrant/
              mountPropagation: "HostToContainer"
      volumes:
        - name: mysql-persistent-storage
          hostPath:
            path: /var/www/vagrant/

---
apiVersion: extensions/v1beta1
kind: Ingress 
metadata: 
  name: ing-wp
  namespace: wordpress-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: / 
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - wp.loc
  rules:
  - host: wp.loc
    http:
      paths:
      - backend:
          serviceName: wordpress
          servicePort: 80
