manifests/wordpress-mysql.yml
---
kind: Service
apiVersion: v1
metadata:
  name: http-server
spec:
  selector:
    app: http-server
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

---
apiVersion: v1
kind: Namespace
metadata:
  name: mysql-ns

---
apiVersion: v1
kind: Namespace
metadata:
  name: wordpress-ns

# ---
# apiVersion: v1
# kind: Secret
# metadata:
#   name: mysql-pass
#   namespace: ns-mysql
# # type: Opaque
# data:
#   password: password

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: mysql-ns
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
        name: mysql
    spec:
      containers:
      - image: mariadb:latest #mysql:5.7
        name: mysql
        # env:
        # - name: MYSQL_ROOT_PASSWORD
        #   valueFrom:
        #     secretKeyRef:
        #       name: mysql-pass
        #       key: password
        # ports:
        # - containerPort: 3306
        #   name: mysql
        volumeMounts:
        - name: db-folder
          mountPath: /var/lib/mysql
      volumes:
        - name: db-folder
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: mysql-ns
spec:
  type: ClusterIP
  ports:
  - name: mysql
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: mysql

---
apiVersion: apps/v1 #extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  generation: 2
  labels:
    app: wordpress
  name: wordpress
  namespace: wordpress-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - image: wordpress:5-php7.2-apache
          name: wordpress
          # env:
          # - name: WORDPRESS_DB_HOST
          #   value: mysql.mysql-ns.svc.cluster.local
          # - name: MYSQL_ROOT_PASSWORD
          #   valueFrom:
          #     secretKeyRef:
          #       name: mysql-pass
          #       key: password
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: wordpress
              mountPath: /var/www/html
      volumes:
        - name: wordpress
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: wordpress-ns
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: wordpress
  # type: NodePort

---
apiVersion: extensions/v1beta1
kind: Ingress 
metadata: 
  name: ing-wp
  namespace: wordpress-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: / 
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - wp.loc
  rules:
  - host: wp.loc
    http:
      paths:
      - backend:
          serviceName: wordpress
          servicePort: 80
